# FastAPI_guitars_api

./: .env.template  .gitignore  README.md  alembic.ini  compose-local.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml
alembic/: env.py
alembic/versions/: 15f67836183e_initial_migration.py  2025_01_09_1839-e1f63e487fee_initial.py  2025_01_10_1319-a16098851806_initial.py  2025_01_10_1433-2a2e8c3dcb8f_add_guitars_and_brands_tables.py  2025_01_10_1451-ef487814c8ad_add_guitars_and_brands_tables.py  2025_01_10_1454-4b5a9ba3211a_add_guitars_and_brands_tables.py  2025_01_10_1456-6f3498afb717_add_guitars_and_brands_tables.py  2025_01_10_1511-e1dd7dfb3608_add_guitars_and_brands_tables.py  2025_01_10_1547-02ee7b9c5ef9_add_guitars_and_brands_tables.py  2025_01_10_1646-671b58a71fc8_add_guitars_and_brands_tables.py  2025_01_13_1345-58763dd64236_edited_relationship.py  78e007dc232f_initial_migrations.py
app/brands/: crud.py  dependencies.py  scemas.py  views.py
app/core/: config.py
app/db/: __init__.py  session.py
app/guitars/: __init__.py  crud.py  dependencies.py  scemas.py  views.py
app/scripts/: get_guitars.py  guitars.json  guitars_to_db.py
app/src/: main.py
src/: __init__.py  main.py  run  run.py  run_main.py
src/brands/: __init__.py  crud.py  dependencies.py  scemas.py  views.py
src/core/: config.py
src/db/: __init__.py  base.py  session.py
src/guitars/: __init__.py  crud.py  dependencies.py  scemas.py  views.py
tests/: conftest.py  test_brands.py  test_guitars.py  test_main.py
(+13 files in other folders)
