[tool.poetry]
name = "fastapi-musicians"
version = "0.1.0"
description = ""
authors = ["Flash <btovt@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standart"], version = "^0.115.6"}
uvicorn = "^0.34.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
aiohttp = "^3.11.11"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

